# electronic-chess-board-cpp

./: .gitignore  CMakeLists.txt  Electronics.cpp  Electronics.h  LedThread.cpp  LedThread.h  LedThreadManager.cpp  LedThreadManager.h  PythonInterface.cpp  PythonInterface.h  README.md  main.cpp
python/: chessboard.i  readLoop.py
python-release/: chessboard.i  chessboard.py  compile.sh
